infra/environments/development/devConfigPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dev
spec:
  template:
    spec:
      containers:
        - name: frontend-dev
